# coding-problems-solutions

./: README.md  book.json  codewars.json  leetcode.json
archgenerator/: pyproject.toml
archgenerator/archgenerator/docs/: consts.py  generator.py
docs/: README.md  SUMMARY.md
docs/CodeWars/4-Kyu/: Matrix-Determinant.md  Memoized-Log-Cutting.md  Range-Extraction.md  Roman-Numerals-Helper.md  Simple-Fun-159-Middle-Permutation.md  Sum-of-Intervals.md  The-observed-PIN.md
docs/CodeWars/5-Kyu/: Maximum-subarray-sum.md  Moving-Zeros-To-The-End.md  Rot13.md  The-Hunger-Games-Zoo-Disaster.md  Variadic-Parameter-Pack-Count.md
docs/CodeWars/6-Kyu/: Backspaces-in-string.md  Banker-s-Plan.md  Count-the-smiley-faces.md  Counting-Duplicates.md  Framed-Reflection.md  Linked-Lists-Length-Count.md  Maze-Runner.md  Mexican-Wave.md  Number-Format.md  Persistent-Bugger.md  Playing-with-digits.md  SQL-Basics-Simple-HAVING.md  Statistics-for-an-Athletic-Association.md  The-Deaf-Rats-of-Hamelin.md  Tortoise-racing.md  Unique-In-Order.md  Who-likes-it.md
docs/CodeWars/7-Kyu/: Complementary-DNA.md  Get-the-Middle-Character.md  Growth-of-a-Population.md  Jaden-Casing-Strings.md  Moves-in-squared-strings-I.md  SQL-with-Harry-Potter-Sorting-Hat-Comparators.md  Shortest-Word.md  Two-to-One.md  What-time-is-it.md
docs/CodeWars/8-Kyu/: SQL-Basics-Mod.md
docs/CodeWars/Beta/: Who-am-I.md
docs/LeetCode/Easy/: Binary-Search.md  Binary-Tree-Tilt.md  Check-If-N-and-Its-Double-Exist.md  Climbing-Stairs.md  Complement-of-Base-10-Integer.md  Consecutive-Characters.md  Contains-Duplicate.md  (+57 more)
(+176 files in other folders)
